--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,24 @@
   <version>1.0-SNAPSHOT</version>
   <name>test-demo</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jd-common-web.version>1.1.5</jd-common-web.version>
+    <slf4j.version>1.7.7</slf4j.version>
+    <log4j2.version>2.3</log4j2.version>
+    <fastjson.version>1.2.28</fastjson.version>
+    <guava.version>23.0-rc1</guava.version>
+    <commons-lang3.version>3.1</commons-lang3.version>
+    <commons-collections.version>3.2.1</commons-collections.version>
+    <xstream.version>1.3.1</xstream.version>
+    <!-- 下为机票的jar版本 -->
+    <mobile-dataCenter-service.version>1.0.0</mobile-dataCenter-service.version>
+    <air-order-service.version>1.0.0</air-order-service.version>
+    <airplane-consumer.version>1.0.0-SNAPSHOT</airplane-consumer.version>
+    <spring.version>4.2.5.RELEASE</spring.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,24 +32,67 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- spring begin -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>4.2.5.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <!-- spring end -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>19.0</version>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-cache</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-starter-cache</artifactId>-->
+    <!--</dependency>-->
     <!-- Redis客户端 -->
     <dependency>
       <groupId>redis.clients</groupId>
@@ -43,6 +104,11 @@
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
       <version>1.7.2.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.29</version>
     </dependency>
   </dependencies>
   <build>
