--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,6 @@
     <commons-lang3.version>3.1</commons-lang3.version>
     <commons-collections.version>3.2.1</commons-collections.version>
     <xstream.version>1.3.1</xstream.version>
-    <!-- 下为机票的jar版本 -->
-    <mobile-dataCenter-service.version>1.0.0</mobile-dataCenter-service.version>
-    <air-order-service.version>1.0.0</air-order-service.version>
-    <airplane-consumer.version>1.0.0-SNAPSHOT</airplane-consumer.version>
     <spring.version>4.2.5.RELEASE</spring.version>
   </properties>
 
@@ -50,40 +46,39 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
       <version>${spring.version}</version>
     </dependency>
     <!-- spring end -->
@@ -147,5 +142,16 @@
   </dependencies>
   <build>
     <finalName>test-demo</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
