--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.3.2</version>
+      </plugin>
     </plugins>
   </build>
 </project>
