--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,16 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.29</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpmime</artifactId>
+      <version>4.5.6</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>test-demo</finalName>
