--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
       <artifactId>httpmime</artifactId>
       <version>4.5.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.10</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>test-demo</finalName>
